all small mistakes are fixed, while deleting a person, old file is deleted and new one is created and replaced by status of inactive